New Cells for file transfer to cluster + KNIME Protocol support
There are two new cell types for saving port objects in a table.
Additionally I changed existing nodes to support the KNIME protocol, like knime://knime.workflow/mydata.mzml.